[package]
name = "spatialtis_core"
version = "0.1.1"
authors = ["Milk <zym.zym1220@gmail.com>"]
edition = "2018"

[package.metadata.maturin]
classifier = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[dependencies]
itertools = "0.10.1"
itertools-num = "0.1.3"
rand = "0.8.3"
rayon = "1.5.1"
kiddo = "0.1.6"
rstar = "0.9.1"
delaunator = "1.0.1"
geo = "0.18.0"
counter = "0.5.2"
ordered-float = "2.8.0"
ndarray = { version = "0.15.3", features =['rayon'] }
ndarray-stats = "0.5.0"
num-traits = "0.2.14"
statrs = "0.15.0"
numpy = "0.14.1"
nalgebra-sparse = "0.5.0"
wkt = "0.9.2"

[profile.dev]
opt-level = 3

[lib]
name = "spatialtis_core"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]