[package]
name = "spatialtis_core"
version = "0.2.3"
authors = ["Milk <zym.zym1220@gmail.com>"]
edition = "2021"

[package.metadata.maturin]
classifier = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
kiddo = "0.2.4"
rstar = "0.9.3"
delaunator = "1.0.1"
geo = "0.23.0"
counter = "0.5.5"
ordered-float = "3.9.2"
ndarray = { version = "0.15.4", features =['rayon'] }
ndarray-stats = "0.5.0"
num-traits = "0.2.14"
statrs = "0.15.0"
permutation = "0.4.0"
wkt = "0.10.1"
nalgebra-sparse = "0.7.0"

[profile.dev]
opt-level = 3

[lib]
name = "spatialtis_core"
crate-type = ["cdylib"]

[dependencies.numpy]
version = "0.17.1"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]